--- a/src/PlatformExampleAppWeb/package.json
+++ b/src/PlatformExampleAppWeb/package.json
@@ -1,19 +1,4 @@
 {
-    "name": "platform-example-web",
-    "version": "0.0.0",
-    "license": "MIT",
-    "scripts": {
-        "ng": "nx",
-        "postinstall": "node ./decorate-angular-cli.js",
-        "start": "nx serve",
-        "build": "nx lint apps-domains-text-snippet-domain && nx lint platform-core && nx lint playground-text-snippet && nx build playground-text-snippet",
-        "dev-start:playground-text-snippet": "nx serve playground-text-snippet -c development --port=4001",
-        "test": "nx test"
-    },
-    "private": true,
-    "engines": {
-        "node": ">=14.17.3"
-    },
     "dependencies": {
         "@angular/animations": "^17.0.8",
         "@angular/cdk": "^17.0.4",
@@ -47,7 +32,7 @@
         "ngx-toastr": "16.0.1",
         "rxjs": "^7.8.1",
         "tslib": "2.3.0",
-        "type-fest": "~3.3.0",
+        "type-fest": "^4.15.0",
         "zone.js": "0.14.4"
     },
     "devDependencies": {
@@ -66,20 +51,21 @@
         "@nx/jest": "^17.2.7",
         "@nx/workspace": "^17.2.7",
         "@schematics/angular": "^17.0.8",
+        "@types/inputmask": "^5.0.7",
         "@types/jest": "^29.5.12",
         "@types/jquery": "^3.5.29",
-        "@types/lodash-es": "4.17.6",
-        "@types/node": "18.16.9",
-        "@typescript-eslint/eslint-plugin": "~6.15.0",
-        "@typescript-eslint/parser": "~6.15.0",
-        "eslint": "~8.56.0",
+        "@types/lodash-es": "^4.17.6",
+        "@types/node": "^18.16.9",
+        "@typescript-eslint/eslint-plugin": "^6.15.0",
+        "@typescript-eslint/parser": "^6.15.0",
+        "eslint": "^8.56.0",
         "eslint-config-prettier": "~9.1.0",
-        "eslint-plugin-cypress": "~2.15.1",
-        "eslint-plugin-import": "~2.29.1",
+        "eslint-plugin-cypress": "^2.15.1",
+        "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-prettier": "~5.1.1",
-        "eslint-plugin-sonar": "~0.12.0",
-        "eslint-plugin-sonarjs": "~0.23.0",
-        "eslint-plugin-unused-imports": "~3.0.0",
+        "eslint-plugin-sonar": "^0.12.0",
+        "eslint-plugin-sonarjs": "^0.23.0",
+        "eslint-plugin-unused-imports": "^3.0.0",
         "jest": "^29.5.0",
         "jest-environment-jsdom": "^29.5.0",
         "jest-preset-angular": "13.1.4",
@@ -88,14 +74,29 @@
         "nx": "^17.2.7",
         "nx-cloud": "^16.0.4",
         "postcss": "^8.4.35",
-        "postcss-import": "~14.1.0",
-        "postcss-preset-env": "~7.5.0",
-        "postcss-url": "~10.1.3",
+        "postcss-import": "^14.1.0",
+        "postcss-preset-env": "^7.5.0",
+        "postcss-url": "^10.1.3",
         "posthtml": "0.16.6",
         "posthtml-attrs-sorter": "1.1.0",
         "prettier": "~3.1.1",
         "ts-jest": "29.1.1",
         "ts-node": "10.9.1",
-        "typescript": "~5.2.0"
-    }
+        "typescript": "^5.2.0"
+    },
+    "engines": {
+        "node": ">=14.17.3"
+    },
+    "license": "MIT",
+    "name": "platform-example-web",
+    "private": true,
+    "scripts": {
+        "build": "nx lint apps-domains-text-snippet-domain && nx lint platform-core && nx lint playground-text-snippet && nx build playground-text-snippet",
+        "dev-start:playground-text-snippet": "nx serve playground-text-snippet -c development --port=4001",
+        "ng": "nx",
+        "postinstall": "node ./decorate-angular-cli.js",
+        "start": "nx serve",
+        "test": "nx test"
+    },
+    "version": "0.0.0"
 }
