--- a/src/PlatformExampleAppWeb/package.json
+++ b/src/PlatformExampleAppWeb/package.json
@@ -1,78 +1,78 @@
 {
     "dependencies": {
-        "@angular/animations": "^17.0.8",
-        "@angular/cdk": "^17.0.4",
-        "@angular/common": "^17.0.8",
-        "@angular/compiler": "^17.0.8",
-        "@angular/core": "^17.0.8",
-        "@angular/flex-layout": "^15.0.0-beta.42",
-        "@angular/forms": "^17.0.8",
-        "@angular/localize": "^17.0.8",
-        "@angular/material": "^17.0.4",
-        "@angular/material-moment-adapter": "^17.0.4",
-        "@angular/platform-browser": "^17.0.8",
-        "@angular/platform-browser-dynamic": "^17.0.8",
-        "@angular/pwa": "^17.0.8",
-        "@angular/router": "^17.0.8",
-        "@angular/service-worker": "^17.0.8",
-        "@ng-select/ng-select": "~12.0.7",
-        "@ngneat/hot-toast": "4.1.0",
-        "@ngneat/overview": "3.0.0",
+        "@angular/animations": "18.0.1",
+        "@angular/cdk": "18.0.1",
+        "@angular/common": "18.0.1",
+        "@angular/compiler": "18.0.1",
+        "@angular/core": "18.0.1",
+        "@angular/forms": "18.0.1",
+        "@angular/localize": "18.0.1",
+        "@angular/material": "18.0.1",
+        "@angular/material-moment-adapter": "18.0.1",
+        "@angular/platform-browser": "18.0.1",
+        "@angular/platform-browser-dynamic": "18.0.1",
+        "@angular/pwa": "18.0.2",
+        "@angular/router": "18.0.1",
+        "@angular/service-worker": "18.0.1",
+        "@ng-select/ng-select": "^13.2.0",
+        "@ngneat/hot-toast": "^7.0.0",
+        "@ngneat/input-mask": "^6.1.0",
+        "@ngneat/overview": "^6.0.0",
         "@ngrx/component-store": "^17.0.1",
-        "@ngx-translate/core": "14.0.0",
-        "@ngx-translate/http-loader": "7.0.0",
-        "angular-oauth2-oidc": "13.0.1",
+        "@ngx-translate/core": "^14.0.0",
+        "@ngx-translate/http-loader": "^7.0.0",
+        "angular-oauth2-oidc": "^17.0.2",
         "bootstrap": "^5.2.3",
         "font-awesome": "4.7.0",
-        "highcharts": "10.2.1",
-        "highcharts-angular": "3.0.0",
+        "highcharts": "^11.4.3",
+        "highcharts-angular": "^4.0.0",
         "lodash-es": "4.17.21",
         "moment": "2.29.4",
         "moment-timezone": "^0.5.43",
-        "ngx-toastr": "16.0.1",
+        "ngx-toastr": "^19.0.0",
         "rxjs": "^7.8.1",
         "tslib": "2.3.0",
         "type-fest": "^4.15.0",
         "zone.js": "0.14.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^17.2.0",
-        "@angular-devkit/core": "^17.0.8",
-        "@angular-devkit/schematics": "^17.0.8",
-        "@angular-eslint/eslint-plugin": "^17.1.1",
-        "@angular-eslint/eslint-plugin-template": "^17.1.1",
-        "@angular-eslint/template-parser": "^17.1.1",
-        "@angular/cli": "^17.0.8",
-        "@angular/compiler-cli": "^17.0.8",
-        "@angular/language-service": "^17.0.8",
-        "@nx/angular": "^17.2.7",
-        "@nx/eslint": "^17.2.7",
-        "@nx/eslint-plugin": "^17.2.7",
-        "@nx/jest": "^17.2.7",
-        "@nx/workspace": "^17.2.7",
-        "@schematics/angular": "^17.0.8",
+        "@angular-devkit/build-angular": "^18.0.0",
+        "@angular-devkit/core": "^18.0.0",
+        "@angular-devkit/schematics": "^18.0.0",
+        "@angular-eslint/eslint-plugin": "^18.0.0",
+        "@angular-eslint/eslint-plugin-template": "^18.0.0",
+        "@angular-eslint/template-parser": "^18.0.0",
+        "@angular/cli": "^18.0.0",
+        "@angular/compiler-cli": "^18.0.0",
+        "@angular/language-service": "^18.0.0",
+        "@nx/angular": "^19.1.1",
+        "@nx/eslint": "^19.1.1",
+        "@nx/eslint-plugin": "^19.1.1",
+        "@nx/jest": "^19.1.1",
+        "@nx/workspace": "^19.1.1",
+        "@schematics/angular": "^18.0.0",
         "@types/inputmask": "^5.0.7",
         "@types/jest": "^29.5.12",
         "@types/jquery": "^3.5.29",
         "@types/lodash-es": "^4.17.6",
         "@types/node": "^18.16.9",
-        "@typescript-eslint/eslint-plugin": "^6.15.0",
-        "@typescript-eslint/parser": "^6.15.0",
-        "eslint": "^8.56.0",
-        "eslint-config-prettier": "~9.1.0",
+        "@typescript-eslint/eslint-plugin": "^7.3.0",
+        "@typescript-eslint/parser": "^7.3.0",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-cypress": "^2.15.1",
         "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-prettier": "~5.1.1",
+        "eslint-plugin-prettier": "^5.1.1",
         "eslint-plugin-sonar": "^0.12.0",
         "eslint-plugin-sonarjs": "^0.23.0",
         "eslint-plugin-unused-imports": "^3.0.0",
         "jest": "^29.5.0",
         "jest-environment-jsdom": "^29.5.0",
-        "jest-preset-angular": "13.1.4",
-        "js-beautify": "1.14.6",
-        "ng-packagr": "^17.0.3",
-        "nx": "^17.2.7",
-        "nx-cloud": "^16.0.4",
+        "jest-preset-angular": "^14.1.0",
+        "js-beautify": "^1.14.6",
+        "ng-packagr": "^18.0.0",
+        "nx": "^19.1.1",
+        "nx-cloud": "^19.0.0",
         "postcss": "^8.4.35",
         "postcss-import": "^14.1.0",
         "postcss-preset-env": "^7.5.0",
@@ -80,8 +80,8 @@
         "posthtml": "0.16.6",
         "posthtml-attrs-sorter": "1.1.0",
         "prettier": "~3.1.1",
-        "ts-jest": "29.1.1",
-        "ts-node": "10.9.1",
+        "ts-jest": "^29.1.1",
+        "ts-node": "^10.9.1",
         "typescript": "^5.2.0"
     },
     "engines": {
