--- a/src/PlatformExampleAppWeb/libs/platform-core/.eslintrc.json
+++ b/src/PlatformExampleAppWeb/libs/platform-core/.eslintrc.json
@@ -3,35 +3,36 @@
     "ignorePatterns": ["!**/*"],
     "overrides": [
         {
-            "files": ["*.ts"],
             "extends": ["plugin:@nx/angular", "plugin:@angular-eslint/template/process-inline-templates"],
+            "files": ["*.ts"],
             "rules": {
-                "@angular-eslint/directive-selector": [
-                    "error",
-                    {
-                        "type": "attribute",
-                        "prefix": "platform",
-                        "style": "camelCase"
-                    }
-                ],
                 "@angular-eslint/component-selector": [
                     "error",
                     {
-                        "type": "element",
                         "prefix": "platform",
-                        "style": "kebab-case"
+                        "style": "kebab-case",
+                        "type": "element"
                     }
                 ],
-                "@typescript-eslint/no-inferrable-types": "off",
-                "@typescript-eslint/no-empty-interface": "off",
+                "@angular-eslint/directive-selector": [
+                    "error",
+                    {
+                        "prefix": "platform",
+                        "style": "camelCase",
+                        "type": "attribute"
+                    }
+                ],
+                "@angular-eslint/no-input-rename": "off",
                 "@angular-eslint/no-output-rename": "off",
                 "@typescript-eslint/member-ordering": "off",
-                "@angular-eslint/no-input-rename": "off"
+                "@typescript-eslint/no-empty-interface": "off",
+                "@typescript-eslint/no-inferrable-types": "off",
+                "sonarjs/prefer-single-boolean-return": "off"
             }
         },
         {
-            "files": ["*.html"],
             "extends": ["plugin:@nx/angular-template"],
+            "files": ["*.html"],
             "rules": {
                 "@angular-eslint/template/eqeqeq": [
                     "off",
