--- a/src/PlatformExampleApp/PlatformExampleApp.Ids/PlatformExampleApp.Ids.csproj
+++ b/src/PlatformExampleApp/PlatformExampleApp.Ids/PlatformExampleApp.Ids.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Platform\Easy.Platform\Easy.Platform.csproj" />
+  </ItemGroup>
+
 </Project>
